--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.amazonaws.glue</groupId>
   <artifactId>aws-glue-datacatalog-hive-client</artifactId>
-  <version>3.4.0-SNAPSHOT</version>
+  <version>3.4.0</version>
     <modules>
       <module>aws-glue-datacatalog-client-common</module>
       <module>aws-glue-datacatalog-spark-client</module>
@@ -20,7 +20,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <guava.version>28.2-jre</guava.version>
     <hive3.version>3.1.3</hive3.version>
-    <spark-hive.version>2.3.10-SNAPSHOT</spark-hive.version>
+    <spark-hive.version>2.3.10</spark-hive.version>
     <aws.sdk.version>1.12.31</aws.sdk.version>
     <junit.version>4.11</junit.version>
     <mockito.version>1.10.19</mockito.version>
